Make website mode android frendly

--- a/manifest.json
+++ b/manifest.json
@@ -43,7 +43,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "",
+  "start_url": "/",
   "background_color": "#ffffff",
   "display": "standalone",
   "scope": "/",
