WIP: set up a service worker for cache

--- a/manifest.json
+++ b/manifest.json
@@ -43,9 +43,10 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/",
+  "start_url": "",
   "background_color": "#ffffff",
   "display": "standalone",
   "scope": "/",
-  "theme_color": "#000000"
+  "theme_color": "#000000",
+  "orientation": "portrait"
 }
