--- a/manifest.json
+++ b/manifest.json
@@ -46,7 +46,7 @@
   "start_url": "",
   "background_color": "#ffffff",
   "display": "standalone",
-  "scope": "/",
+  "scope": "",
   "theme_color": "#000000",
   "orientation": "portrait"
 }
