--- a/manifest.json
+++ b/manifest.json
@@ -43,10 +43,9 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "/index.html",
+  "start_url": "index.html",
   "background_color": "#ffffff",
   "display": "standalone",
-  "scope": "/",
   "theme_color": "#000000",
   "orientation": "portrait"
 }
